--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "axios": "^1.7.9",
+    "express": "^4.21.2",
     "framer-motion": "^11.17.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.1.4",
+    "pnpm": "^9.15.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0"
